--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,10 +1,6 @@
 backend:
-  name: github
-  repo: s0f4surf3r/jochenhornung-website
+  name: git-gateway
   branch: main
-  # FIX: Diese beiden Zeilen lösen das "Not Found" Problem
-  base_url: https://api.netlify.com
-  site_domain: poetic-lollipop-029be3.netlify.app
 
 media_folder: "src/images"
 public_folder: "/images"
@@ -23,3 +19,4 @@ collections:
       - {label: "Typ", name: "type", widget: "select", options: ["Gedicht", "Essay", "Notiz"], default: "Essay"}
       - {label: "Kurzbeschreibung (optional)", name: "excerpt", widget: "text", required: false}
       - {label: "Text", name: "body", widget: "markdown"}
+      - {label: "Quellen (optional)", name: "quellen", widget: "markdown", required: false}
