--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -23,3 +23,4 @@ collections:
       - {label: "Typ", name: "type", widget: "select", options: ["Gedicht", "Essay", "Notiz"], default: "Essay"}
       - {label: "Kurzbeschreibung (optional)", name: "excerpt", widget: "text", required: false}
       - {label: "Text", name: "body", widget: "markdown"}
+      - {label: "Quellen (optional)", name: "quellen", widget: "markdown", required: false}
